spec/test/_test_case_archive/sample2/data-abnormal/3/result.txt
do_test tecsgen /home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-abnormal/3 abnormal-3.idl
/home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-abnormal/3 ~
##### tecsgen abnormal-3.idl  #####
abnormal-3.idl:1:18: error: G1016 syntax error near 'int32'
1 error
~
